--- a/_modules/thetis/momentum_eq.html
+++ b/_modules/thetis/momentum_eq.html
@@ -5,7 +5,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>thetis.momentum_eq &#8212; Thetis 0+untagged.1878.g52658ff.dirty documentation</title>
+    <title>thetis.momentum_eq &#8212; Thetis 0+untagged.2009.gd7af522 documentation</title>
     <link rel="stylesheet" type="text/css" href="../../_static/pygments.css" />
     <link rel="stylesheet" type="text/css" href="../../_static/thetis.css" />
     <script data-url_root="../../" id="documentation_options" src="../../_static/documentation_options.js"></script>
@@ -133,7 +133,7 @@
 
 
 <div class="viewcode-block" id="MomentumTerm"><a class="viewcode-back" href="../../thetis.html#thetis.momentum_eq.MomentumTerm">[docs]</a><span class="k">class</span> <span class="nc">MomentumTerm</span><span class="p">(</span><span class="n">Term</span><span class="p">):</span>
-    <span class="sd">&quot;&quot;&quot;</span>
+<span class="w">    </span><span class="sd">&quot;&quot;&quot;</span>
 <span class="sd">    Generic term for momentum equation that provides commonly used members and</span>
 <span class="sd">    mapping for boundary functions.</span>
 <span class="sd">    &quot;&quot;&quot;</span>
@@ -142,7 +142,7 @@
                  <span class="n">use_nonlinear_equations</span><span class="o">=</span><span class="kc">True</span><span class="p">,</span> <span class="n">use_lax_friedrichs</span><span class="o">=</span><span class="kc">True</span><span class="p">,</span>
                  <span class="n">use_bottom_friction</span><span class="o">=</span><span class="kc">False</span><span class="p">,</span> <span class="n">sipg_factor</span><span class="o">=</span><span class="n">Constant</span><span class="p">(</span><span class="mf">1.0</span><span class="p">),</span>
                  <span class="n">sipg_factor_vertical</span><span class="o">=</span><span class="n">Constant</span><span class="p">(</span><span class="mf">1.0</span><span class="p">)):</span>
-        <span class="sd">&quot;&quot;&quot;</span>
+<span class="w">        </span><span class="sd">&quot;&quot;&quot;</span>
 <span class="sd">        :arg function_space: :class:`FunctionSpace` where the solution belongs</span>
 <span class="sd">        :kwarg bathymetry: bathymetry of the domain</span>
 <span class="sd">        :type bathymetry: 3D :class:`Function` or :class:`Constant`</span>
@@ -181,7 +181,7 @@
 
 
 <div class="viewcode-block" id="PressureGradientTerm"><a class="viewcode-back" href="../../thetis.html#thetis.momentum_eq.PressureGradientTerm">[docs]</a><span class="k">class</span> <span class="nc">PressureGradientTerm</span><span class="p">(</span><span class="n">MomentumTerm</span><span class="p">):</span>
-    <span class="sa">r</span><span class="sd">&quot;&quot;&quot;</span>
+<span class="w">    </span><span class="sa">r</span><span class="sd">&quot;&quot;&quot;</span>
 <span class="sd">    Internal pressure gradient term, :math:`g\nabla_h r`</span>
 
 <span class="sd">    where :math:`r` is the baroclinic head :eq:`baroc_head`. Let :math:`s`</span>
@@ -214,7 +214,7 @@
 
 
 <div class="viewcode-block" id="HorizontalAdvectionTerm"><a class="viewcode-back" href="../../thetis.html#thetis.momentum_eq.HorizontalAdvectionTerm">[docs]</a><span class="k">class</span> <span class="nc">HorizontalAdvectionTerm</span><span class="p">(</span><span class="n">MomentumTerm</span><span class="p">):</span>
-    <span class="sa">r</span><span class="sd">&quot;&quot;&quot;</span>
+<span class="w">    </span><span class="sa">r</span><span class="sd">&quot;&quot;&quot;</span>
 <span class="sd">    Horizontal advection term, :math:`\nabla_h \cdot (\textbf{u} \textbf{u})`</span>
 
 <span class="sd">    The weak form reads</span>
@@ -320,7 +320,7 @@
 
 
 <div class="viewcode-block" id="VerticalAdvectionTerm"><a class="viewcode-back" href="../../thetis.html#thetis.momentum_eq.VerticalAdvectionTerm">[docs]</a><span class="k">class</span> <span class="nc">VerticalAdvectionTerm</span><span class="p">(</span><span class="n">MomentumTerm</span><span class="p">):</span>
-    <span class="sa">r</span><span class="sd">&quot;&quot;&quot;</span>
+<span class="w">    </span><span class="sa">r</span><span class="sd">&quot;&quot;&quot;</span>
 <span class="sd">    Vertical advection term, :math:`\partial \left(w\textbf{u} \right)/(\partial z)`</span>
 
 <span class="sd">    The weak form reads</span>
@@ -368,7 +368,7 @@
 
 
 <div class="viewcode-block" id="HorizontalViscosityTerm"><a class="viewcode-back" href="../../thetis.html#thetis.momentum_eq.HorizontalViscosityTerm">[docs]</a><span class="k">class</span> <span class="nc">HorizontalViscosityTerm</span><span class="p">(</span><span class="n">MomentumTerm</span><span class="p">):</span>
-    <span class="sa">r</span><span class="sd">&quot;&quot;&quot;</span>
+<span class="w">    </span><span class="sa">r</span><span class="sd">&quot;&quot;&quot;</span>
 <span class="sd">    Horizontal viscosity term, :math:`- \nabla_h \cdot \left( \nu_h \nabla_h \textbf{u} \right)`</span>
 
 <span class="sd">    Using the symmetric interior penalty method the weak form becomes</span>
@@ -443,7 +443,7 @@
 
 
 <div class="viewcode-block" id="VerticalViscosityTerm"><a class="viewcode-back" href="../../thetis.html#thetis.momentum_eq.VerticalViscosityTerm">[docs]</a><span class="k">class</span> <span class="nc">VerticalViscosityTerm</span><span class="p">(</span><span class="n">MomentumTerm</span><span class="p">):</span>
-    <span class="sa">r</span><span class="sd">&quot;&quot;&quot;</span>
+<span class="w">    </span><span class="sa">r</span><span class="sd">&quot;&quot;&quot;</span>
 <span class="sd">    Vertical viscosity term, :math:`- \frac{\partial }{\partial z}\left( \nu \frac{\partial \textbf{u}}{\partial z}\right)`</span>
 
 <span class="sd">    Using the symmetric interior penalty method the weak form becomes</span>
@@ -494,7 +494,7 @@
 
 
 <div class="viewcode-block" id="BottomFrictionTerm"><a class="viewcode-back" href="../../thetis.html#thetis.momentum_eq.BottomFrictionTerm">[docs]</a><span class="k">class</span> <span class="nc">BottomFrictionTerm</span><span class="p">(</span><span class="n">MomentumTerm</span><span class="p">):</span>
-    <span class="sa">r</span><span class="sd">&quot;&quot;&quot;</span>
+<span class="w">    </span><span class="sa">r</span><span class="sd">&quot;&quot;&quot;</span>
 <span class="sd">    Quadratic bottom friction term, :math:`\tau_b = C_D \| \textbf{u}_b \| \textbf{u}_b`</span>
 
 <span class="sd">    The weak formulation reads</span>
@@ -551,7 +551,7 @@
 
 
 <div class="viewcode-block" id="LinearDragTerm"><a class="viewcode-back" href="../../thetis.html#thetis.momentum_eq.LinearDragTerm">[docs]</a><span class="k">class</span> <span class="nc">LinearDragTerm</span><span class="p">(</span><span class="n">MomentumTerm</span><span class="p">):</span>
-    <span class="sa">r</span><span class="sd">&quot;&quot;&quot;</span>
+<span class="w">    </span><span class="sa">r</span><span class="sd">&quot;&quot;&quot;</span>
 <span class="sd">    Linear drag term, :math:`\tau_b = D \textbf{u}_b`</span>
 
 <span class="sd">    where :math:`D` is the drag coefficient, read from ``linear_drag_coefficient`` field.</span>
@@ -572,7 +572,7 @@
 
 
 <div class="viewcode-block" id="CoriolisTerm"><a class="viewcode-back" href="../../thetis.html#thetis.momentum_eq.CoriolisTerm">[docs]</a><span class="k">class</span> <span class="nc">CoriolisTerm</span><span class="p">(</span><span class="n">MomentumTerm</span><span class="p">):</span>
-    <span class="sa">r</span><span class="sd">&quot;&quot;&quot;</span>
+<span class="w">    </span><span class="sa">r</span><span class="sd">&quot;&quot;&quot;</span>
 <span class="sd">    Coriolis term, :math:`f\textbf{e}_z\wedge \bar{\textbf{u}}`</span>
 <span class="sd">    &quot;&quot;&quot;</span>
 <div class="viewcode-block" id="CoriolisTerm.residual"><a class="viewcode-back" href="../../thetis.html#thetis.momentum_eq.CoriolisTerm.residual">[docs]</a>    <span class="k">def</span> <span class="nf">residual</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">solution</span><span class="p">,</span> <span class="n">solution_old</span><span class="p">,</span> <span class="n">fields</span><span class="p">,</span> <span class="n">fields_old</span><span class="p">,</span> <span class="n">bnd_conditions</span><span class="p">):</span>
@@ -585,7 +585,7 @@
 
 
 <div class="viewcode-block" id="SourceTerm"><a class="viewcode-back" href="../../thetis.html#thetis.momentum_eq.SourceTerm">[docs]</a><span class="k">class</span> <span class="nc">SourceTerm</span><span class="p">(</span><span class="n">MomentumTerm</span><span class="p">):</span>
-    <span class="sa">r</span><span class="sd">&quot;&quot;&quot;</span>
+<span class="w">    </span><span class="sa">r</span><span class="sd">&quot;&quot;&quot;</span>
 <span class="sd">    Generic momentum source term</span>
 
 <span class="sd">    The weak form reads</span>
@@ -623,7 +623,7 @@
 
 
 <div class="viewcode-block" id="MomentumEquation"><a class="viewcode-back" href="../../thetis.html#thetis.momentum_eq.MomentumEquation">[docs]</a><span class="k">class</span> <span class="nc">MomentumEquation</span><span class="p">(</span><span class="n">Equation</span><span class="p">):</span>
-    <span class="sd">&quot;&quot;&quot;</span>
+<span class="w">    </span><span class="sd">&quot;&quot;&quot;</span>
 <span class="sd">    Hydrostatic 3D momentum equation :eq:`mom_eq_split` for mode split models</span>
 <span class="sd">    &quot;&quot;&quot;</span>
     <span class="k">def</span> <span class="fm">__init__</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">function_space</span><span class="p">,</span>
@@ -631,7 +631,7 @@
                  <span class="n">use_nonlinear_equations</span><span class="o">=</span><span class="kc">True</span><span class="p">,</span> <span class="n">use_lax_friedrichs</span><span class="o">=</span><span class="kc">True</span><span class="p">,</span>
                  <span class="n">use_bottom_friction</span><span class="o">=</span><span class="kc">False</span><span class="p">,</span> <span class="n">sipg_factor</span><span class="o">=</span><span class="n">Constant</span><span class="p">(</span><span class="mf">1.0</span><span class="p">),</span>
                  <span class="n">sipg_factor_vertical</span><span class="o">=</span><span class="n">Constant</span><span class="p">(</span><span class="mf">1.0</span><span class="p">)):</span>
-        <span class="sd">&quot;&quot;&quot;</span>
+<span class="w">        </span><span class="sd">&quot;&quot;&quot;</span>
 <span class="sd">        :arg function_space: :class:`FunctionSpace` where the solution belongs</span>
 <span class="sd">        :kwarg bathymetry: bathymetry of the domain</span>
 <span class="sd">        :type bathymetry: 3D :class:`Function` or :class:`Constant`</span>
@@ -663,7 +663,7 @@
 
 
 <div class="viewcode-block" id="InternalPressureGradientCalculator"><a class="viewcode-back" href="../../thetis.html#thetis.momentum_eq.InternalPressureGradientCalculator">[docs]</a><span class="k">class</span> <span class="nc">InternalPressureGradientCalculator</span><span class="p">(</span><span class="n">MomentumTerm</span><span class="p">):</span>
-    <span class="sa">r</span><span class="sd">&quot;&quot;&quot;</span>
+<span class="w">    </span><span class="sa">r</span><span class="sd">&quot;&quot;&quot;</span>
 <span class="sd">    Computes the internal pressure gradient term, :math:`g\nabla_h r`</span>
 
 <span class="sd">    where :math:`r` is the baroclinic head :eq:`baroc_head`.</span>
@@ -681,7 +681,7 @@
 <span class="sd">    &quot;&quot;&quot;</span>
     <span class="k">def</span> <span class="fm">__init__</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">fields</span><span class="p">,</span> <span class="n">bathymetry</span><span class="p">,</span> <span class="n">bnd_functions</span><span class="p">,</span>
                  <span class="n">internal_pg_scalar</span><span class="o">=</span><span class="kc">None</span><span class="p">,</span> <span class="n">solver_parameters</span><span class="o">=</span><span class="kc">None</span><span class="p">):</span>
-        <span class="sd">&quot;&quot;&quot;</span>
+<span class="w">        </span><span class="sd">&quot;&quot;&quot;</span>
 <span class="sd">        :arg solver: `class`FlowSolver` object</span>
 <span class="sd">        :kwarg dict solver_parameters: PETSc solver options</span>
 <span class="sd">        &quot;&quot;&quot;</span>
@@ -705,7 +705,7 @@
         <span class="bp">self</span><span class="o">.</span><span class="n">lin_solver</span> <span class="o">=</span> <span class="n">LinearVariationalSolver</span><span class="p">(</span><span class="n">prob</span><span class="p">,</span> <span class="n">solver_parameters</span><span class="o">=</span><span class="n">solver_parameters</span><span class="p">)</span>
 
 <div class="viewcode-block" id="InternalPressureGradientCalculator.solve"><a class="viewcode-back" href="../../thetis.html#thetis.momentum_eq.InternalPressureGradientCalculator.solve">[docs]</a>    <span class="k">def</span> <span class="nf">solve</span><span class="p">(</span><span class="bp">self</span><span class="p">):</span>
-        <span class="sd">&quot;&quot;&quot;</span>
+<span class="w">        </span><span class="sd">&quot;&quot;&quot;</span>
 <span class="sd">        Computes internal pressure gradient and stores it in int_pg_3d field</span>
 <span class="sd">        &quot;&quot;&quot;</span>
         <span class="bp">self</span><span class="o">.</span><span class="n">lin_solver</span><span class="o">.</span><span class="n">solve</span><span class="p">()</span></div>
@@ -760,8 +760,8 @@
       <div class="clearer"></div>
     </div>
     <div class="footer" role="contentinfo">
-        &#169; Copyright 2016-2022, Tuomas Kärnä et al..
-      Created using <a href="https://www.sphinx-doc.org/">Sphinx</a> 4.3.2.
+        &#169; Copyright 2016-2023, Tuomas Kärnä et al..
+      Created using <a href="https://www.sphinx-doc.org/">Sphinx</a> 4.5.0.
     </div>
   </body>
 </html>
