--- a/_modules/thetis/sediment_model.html
+++ b/_modules/thetis/sediment_model.html
@@ -5,10 +5,10 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>thetis.sediment_model &#8212; Thetis 0+untagged.1718.gf836c9a.dirty documentation</title>
-    <link rel="stylesheet" href="../../_static/pygments.css" type="text/css" />
-    <link rel="stylesheet" href="../../_static/thetis.css" type="text/css" />
-    <script id="documentation_options" data-url_root="../../" src="../../_static/documentation_options.js"></script>
+    <title>thetis.sediment_model &#8212; Thetis 0+untagged.2009.gd7af522 documentation</title>
+    <link rel="stylesheet" type="text/css" href="../../_static/pygments.css" />
+    <link rel="stylesheet" type="text/css" href="../../_static/thetis.css" />
+    <script data-url_root="../../" id="documentation_options" src="../../_static/documentation_options.js"></script>
     <script src="../../_static/jquery.js"></script>
     <script src="../../_static/underscore.js"></script>
     <script src="../../_static/doctools.js"></script>
@@ -37,7 +37,6 @@
         <li class="page_item"><a href="../../funding.html" title="Our financial supporters">Funding</a></li>
         <li class="page_item"><a href="../../contact.html" title="Getting in touch">Contact</a></li>
         <li class="page_item"><a href="https://github.com/thetisproject/thetis" title="Thetis source on GitHub">GitHub</a></li>
-        <li class="page_item"><a href="https://jenkins.ese.ic.ac.uk:1080/blue/organizations/jenkins/thetis/branches" title="Thetis build status">Jenkins</a></li>
       </ul>
     </div><!-- .menu -->
   </div><!-- #access -->
@@ -58,7 +57,7 @@
 
 <div class="viewcode-block" id="CorrectiveVelocityFactor"><a class="viewcode-back" href="../../thetis.html#thetis.sediment_model.CorrectiveVelocityFactor">[docs]</a><span class="k">class</span> <span class="nc">CorrectiveVelocityFactor</span><span class="p">:</span>
     <span class="k">def</span> <span class="fm">__init__</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">depth</span><span class="p">,</span> <span class="n">ksp</span><span class="p">,</span> <span class="n">settling_velocity</span><span class="p">,</span> <span class="n">ustar</span><span class="p">,</span> <span class="n">a</span><span class="p">):</span>
-        <span class="sd">&quot;&quot;&quot;</span>
+<span class="w">        </span><span class="sd">&quot;&quot;&quot;</span>
 <span class="sd">        Set up advective velocity factor `self.velocity_correction_factor`</span>
 <span class="sd">        which accounts for mismatch between depth-averaged product of</span>
 <span class="sd">        velocity with sediment and product of depth-averaged velocity</span>
@@ -102,7 +101,7 @@
         <span class="bp">self</span><span class="o">.</span><span class="n">update</span><span class="p">()</span>
 
 <div class="viewcode-block" id="CorrectiveVelocityFactor.update"><a class="viewcode-back" href="../../thetis.html#thetis.sediment_model.CorrectiveVelocityFactor.update">[docs]</a>    <span class="k">def</span> <span class="nf">update</span><span class="p">(</span><span class="bp">self</span><span class="p">):</span>
-        <span class="sd">&quot;&quot;&quot;</span>
+<span class="w">        </span><span class="sd">&quot;&quot;&quot;</span>
 <span class="sd">        Update `self.velocity_correction_factor` using the updated values for velocity</span>
 <span class="sd">        &quot;&quot;&quot;</span>
         <span class="c1"># final correction factor</span>
@@ -112,7 +111,7 @@
 <div class="viewcode-block" id="SedimentModel"><a class="viewcode-back" href="../../thetis.html#thetis.sediment_model.SedimentModel">[docs]</a><span class="k">class</span> <span class="nc">SedimentModel</span><span class="p">(</span><span class="nb">object</span><span class="p">):</span>
     <span class="k">def</span> <span class="fm">__init__</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">options</span><span class="p">,</span> <span class="n">mesh2d</span><span class="p">,</span> <span class="n">uv</span><span class="p">,</span> <span class="n">elev</span><span class="p">,</span> <span class="n">depth</span><span class="p">):</span>
 
-        <span class="sd">&quot;&quot;&quot;</span>
+<span class="w">        </span><span class="sd">&quot;&quot;&quot;</span>
 <span class="sd">        Set up a full morphological model simulation based on provided velocity and elevation functions.</span>
 
 <span class="sd">        :arg options: Model options.</span>
@@ -193,10 +192,10 @@
         <span class="bp">self</span><span class="o">.</span><span class="n">dstar</span> <span class="o">=</span> <span class="n">Function</span><span class="p">(</span><span class="bp">self</span><span class="o">.</span><span class="n">P1_2d</span><span class="p">)</span><span class="o">.</span><span class="n">interpolate</span><span class="p">(</span><span class="bp">self</span><span class="o">.</span><span class="n">average_size</span><span class="o">*</span><span class="p">((</span><span class="bp">self</span><span class="o">.</span><span class="n">g</span><span class="o">*</span><span class="bp">self</span><span class="o">.</span><span class="n">R</span><span class="p">)</span><span class="o">/</span><span class="p">(</span><span class="bp">self</span><span class="o">.</span><span class="n">viscosity</span><span class="o">**</span><span class="mi">2</span><span class="p">))</span><span class="o">**</span><span class="p">(</span><span class="mi">1</span><span class="o">/</span><span class="mi">3</span><span class="p">))</span>
         <span class="k">if</span> <span class="nb">float</span><span class="p">(</span><span class="nb">max</span><span class="p">(</span><span class="bp">self</span><span class="o">.</span><span class="n">dstar</span><span class="o">.</span><span class="n">dat</span><span class="o">.</span><span class="n">data</span><span class="p">[:]))</span> <span class="o">&lt;</span> <span class="mi">1</span><span class="p">:</span>
             <span class="k">raise</span> <span class="ne">ValueError</span><span class="p">(</span><span class="s1">&#39;dstar value less than 1&#39;</span><span class="p">)</span>
-        <span class="bp">self</span><span class="o">.</span><span class="n">thetacr</span> <span class="o">=</span> <span class="n">Function</span><span class="p">(</span><span class="bp">self</span><span class="o">.</span><span class="n">P1_2d</span><span class="p">)</span><span class="o">.</span><span class="n">assign</span><span class="p">(</span><span class="n">conditional</span><span class="p">(</span><span class="bp">self</span><span class="o">.</span><span class="n">dstar</span> <span class="o">&lt;</span> <span class="mi">4</span><span class="p">,</span> <span class="mf">0.24</span><span class="o">*</span><span class="p">(</span><span class="bp">self</span><span class="o">.</span><span class="n">dstar</span><span class="o">**</span><span class="p">(</span><span class="o">-</span><span class="mi">1</span><span class="p">)),</span>
-                                                   <span class="n">conditional</span><span class="p">(</span><span class="bp">self</span><span class="o">.</span><span class="n">dstar</span> <span class="o">&lt;</span> <span class="mi">10</span><span class="p">,</span> <span class="mf">0.14</span><span class="o">*</span><span class="p">(</span><span class="bp">self</span><span class="o">.</span><span class="n">dstar</span><span class="o">**</span><span class="p">(</span><span class="o">-</span><span class="mf">0.64</span><span class="p">)),</span>
-                                                   <span class="n">conditional</span><span class="p">(</span><span class="bp">self</span><span class="o">.</span><span class="n">dstar</span> <span class="o">&lt;</span> <span class="mi">20</span><span class="p">,</span> <span class="mf">0.04</span><span class="o">*</span><span class="p">(</span><span class="bp">self</span><span class="o">.</span><span class="n">dstar</span><span class="o">**</span><span class="p">(</span><span class="o">-</span><span class="mf">0.1</span><span class="p">)),</span>
-                                                               <span class="n">conditional</span><span class="p">(</span><span class="bp">self</span><span class="o">.</span><span class="n">dstar</span> <span class="o">&lt;</span> <span class="mi">150</span><span class="p">,</span> <span class="mf">0.013</span><span class="o">*</span><span class="p">(</span><span class="bp">self</span><span class="o">.</span><span class="n">dstar</span><span class="o">**</span><span class="p">(</span><span class="mf">0.29</span><span class="p">)),</span> <span class="mf">0.055</span><span class="p">)))))</span>
+        <span class="bp">self</span><span class="o">.</span><span class="n">thetacr</span> <span class="o">=</span> <span class="n">Function</span><span class="p">(</span><span class="bp">self</span><span class="o">.</span><span class="n">P1_2d</span><span class="p">)</span><span class="o">.</span><span class="n">interpolate</span><span class="p">(</span><span class="n">conditional</span><span class="p">(</span><span class="bp">self</span><span class="o">.</span><span class="n">dstar</span> <span class="o">&lt;</span> <span class="mi">4</span><span class="p">,</span> <span class="mf">0.24</span><span class="o">*</span><span class="p">(</span><span class="bp">self</span><span class="o">.</span><span class="n">dstar</span><span class="o">**</span><span class="p">(</span><span class="o">-</span><span class="mi">1</span><span class="p">)),</span>
+                                                        <span class="n">conditional</span><span class="p">(</span><span class="bp">self</span><span class="o">.</span><span class="n">dstar</span> <span class="o">&lt;</span> <span class="mi">10</span><span class="p">,</span> <span class="mf">0.14</span><span class="o">*</span><span class="p">(</span><span class="bp">self</span><span class="o">.</span><span class="n">dstar</span><span class="o">**</span><span class="p">(</span><span class="o">-</span><span class="mf">0.64</span><span class="p">)),</span>
+                                                        <span class="n">conditional</span><span class="p">(</span><span class="bp">self</span><span class="o">.</span><span class="n">dstar</span> <span class="o">&lt;</span> <span class="mi">20</span><span class="p">,</span> <span class="mf">0.04</span><span class="o">*</span><span class="p">(</span><span class="bp">self</span><span class="o">.</span><span class="n">dstar</span><span class="o">**</span><span class="p">(</span><span class="o">-</span><span class="mf">0.1</span><span class="p">)),</span>
+                                                                    <span class="n">conditional</span><span class="p">(</span><span class="bp">self</span><span class="o">.</span><span class="n">dstar</span> <span class="o">&lt;</span> <span class="mi">150</span><span class="p">,</span> <span class="mf">0.013</span><span class="o">*</span><span class="p">(</span><span class="bp">self</span><span class="o">.</span><span class="n">dstar</span><span class="o">**</span><span class="p">(</span><span class="mf">0.29</span><span class="p">)),</span> <span class="mf">0.055</span><span class="p">)))))</span>
 
         <span class="c1"># critical bed shear stress</span>
         <span class="bp">self</span><span class="o">.</span><span class="n">taucr</span> <span class="o">=</span> <span class="n">Function</span><span class="p">(</span><span class="bp">self</span><span class="o">.</span><span class="n">P1_2d</span><span class="p">)</span><span class="o">.</span><span class="n">interpolate</span><span class="p">((</span><span class="bp">self</span><span class="o">.</span><span class="n">rhos</span><span class="o">-</span><span class="bp">self</span><span class="o">.</span><span class="n">rhow</span><span class="p">)</span><span class="o">*</span><span class="bp">self</span><span class="o">.</span><span class="n">g</span><span class="o">*</span><span class="bp">self</span><span class="o">.</span><span class="n">average_size</span><span class="o">*</span><span class="bp">self</span><span class="o">.</span><span class="n">thetacr</span><span class="p">)</span>
@@ -274,7 +273,7 @@
                 <span class="bp">self</span><span class="o">.</span><span class="n">stress</span> <span class="o">=</span> <span class="n">Function</span><span class="p">(</span><span class="bp">self</span><span class="o">.</span><span class="n">P1DG_2d</span><span class="p">)</span><span class="o">.</span><span class="n">interpolate</span><span class="p">(</span><span class="bp">self</span><span class="o">.</span><span class="n">rhow</span><span class="o">*</span><span class="n">Constant</span><span class="p">(</span><span class="mf">0.5</span><span class="p">)</span><span class="o">*</span><span class="bp">self</span><span class="o">.</span><span class="n">qfc</span><span class="o">*</span><span class="bp">self</span><span class="o">.</span><span class="n">unorm</span><span class="p">)</span>
 
 <div class="viewcode-block" id="SedimentModel.get_bedload_term"><a class="viewcode-back" href="../../thetis.html#thetis.sediment_model.SedimentModel.get_bedload_term">[docs]</a>    <span class="k">def</span> <span class="nf">get_bedload_term</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">bathymetry</span><span class="p">):</span>
-        <span class="sd">&quot;&quot;&quot;</span>
+<span class="w">        </span><span class="sd">&quot;&quot;&quot;</span>
 <span class="sd">        Returns expression for bedload transport :math:`(qbx, qby)` to be used in the Exner equation.</span>
 <span class="sd">        Note bathymetry is the function which is solved for in the exner equation.</span>
 
@@ -408,7 +407,7 @@
         <span class="k">return</span> <span class="n">diff_tensor</span></div>
 
 <div class="viewcode-block" id="SedimentModel.get_deposition_coefficient"><a class="viewcode-back" href="../../thetis.html#thetis.sediment_model.SedimentModel.get_deposition_coefficient">[docs]</a>    <span class="k">def</span> <span class="nf">get_deposition_coefficient</span><span class="p">(</span><span class="bp">self</span><span class="p">):</span>
-        <span class="sd">&quot;&quot;&quot;Returns coefficient :math:`C` such that :math:`C/H*sediment` is deposition term in sediment equation</span>
+<span class="w">        </span><span class="sd">&quot;&quot;&quot;Returns coefficient :math:`C` such that :math:`C/H*sediment` is deposition term in sediment equation</span>
 
 <span class="sd">        If sediment field is depth-averaged, :math:`C*sediment` is (total) deposition (over the column)</span>
 <span class="sd">        as it appears in the Exner equation, but deposition term in sediment equation needs</span>
@@ -418,15 +417,15 @@
         <span class="k">return</span> <span class="bp">self</span><span class="o">.</span><span class="n">_deposition</span></div>
 
 <div class="viewcode-block" id="SedimentModel.get_erosion_term"><a class="viewcode-back" href="../../thetis.html#thetis.sediment_model.SedimentModel.get_erosion_term">[docs]</a>    <span class="k">def</span> <span class="nf">get_erosion_term</span><span class="p">(</span><span class="bp">self</span><span class="p">):</span>
-        <span class="sd">&quot;&quot;&quot;Returns expression for (depth-integrated) erosion.&quot;&quot;&quot;</span>
+<span class="w">        </span><span class="sd">&quot;&quot;&quot;Returns expression for (depth-integrated) erosion.&quot;&quot;&quot;</span>
         <span class="k">return</span> <span class="bp">self</span><span class="o">.</span><span class="n">_erosion</span></div>
 
 <div class="viewcode-block" id="SedimentModel.get_equilibrium_tracer"><a class="viewcode-back" href="../../thetis.html#thetis.sediment_model.SedimentModel.get_equilibrium_tracer">[docs]</a>    <span class="k">def</span> <span class="nf">get_equilibrium_tracer</span><span class="p">(</span><span class="bp">self</span><span class="p">):</span>
-        <span class="sd">&quot;&quot;&quot;Returns expression for (depth-averaged) equilibrium tracer.&quot;&quot;&quot;</span>
+<span class="w">        </span><span class="sd">&quot;&quot;&quot;Returns expression for (depth-averaged) equilibrium tracer.&quot;&quot;&quot;</span>
         <span class="k">return</span> <span class="bp">self</span><span class="o">.</span><span class="n">equilibrium_tracer</span></div>
 
 <div class="viewcode-block" id="SedimentModel.get_advective_velocity_correction_factor"><a class="viewcode-back" href="../../thetis.html#thetis.sediment_model.SedimentModel.get_advective_velocity_correction_factor">[docs]</a>    <span class="k">def</span> <span class="nf">get_advective_velocity_correction_factor</span><span class="p">(</span><span class="bp">self</span><span class="p">):</span>
-        <span class="sd">&quot;&quot;&quot;Returns correction factor for the advective velocity in the sediment equations</span>
+<span class="w">        </span><span class="sd">&quot;&quot;&quot;Returns correction factor for the advective velocity in the sediment equations</span>
 
 <span class="sd">        With :attr:`.SedimentModelOptions.use_advective_velocity_correction`, this applies a correction to</span>
 <span class="sd">        the supplied velocity solution `uv` to take into account the mismatch between</span>
@@ -439,7 +438,7 @@
             <span class="k">return</span> <span class="mi">1</span></div>
 
 <div class="viewcode-block" id="SedimentModel.update"><a class="viewcode-back" href="../../thetis.html#thetis.sediment_model.SedimentModel.update">[docs]</a>    <span class="k">def</span> <span class="nf">update</span><span class="p">(</span><span class="bp">self</span><span class="p">):</span>
-        <span class="sd">&quot;&quot;&quot;Update all functions used by :class:`.SedimentModel`</span>
+<span class="w">        </span><span class="sd">&quot;&quot;&quot;Update all functions used by :class:`.SedimentModel`</span>
 
 <span class="sd">        This repeats all projection and interpolations steps based on the current values</span>
 <span class="sd">        of the `uv` and `elev` functions, provided in __init__.&quot;&quot;&quot;</span>
@@ -479,8 +478,8 @@
       <div class="clearer"></div>
     </div>
     <div class="footer" role="contentinfo">
-        &#169; Copyright 2016-2020, Tuomas Karna et al..
-      Created using <a href="https://www.sphinx-doc.org/">Sphinx</a> 3.5.4.
+        &#169; Copyright 2016-2023, Tuomas Kärnä et al..
+      Created using <a href="https://www.sphinx-doc.org/">Sphinx</a> 4.5.0.
     </div>
   </body>
 </html>
