--- a/_modules/thetis/tracer_eq.html
+++ b/_modules/thetis/tracer_eq.html
@@ -5,7 +5,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>thetis.tracer_eq &#8212; Thetis 0+untagged.1878.g52658ff.dirty documentation</title>
+    <title>thetis.tracer_eq &#8212; Thetis 0+untagged.2009.gd7af522 documentation</title>
     <link rel="stylesheet" type="text/css" href="../../_static/pygments.css" />
     <link rel="stylesheet" type="text/css" href="../../_static/thetis.css" />
     <script data-url_root="../../" id="documentation_options" src="../../_static/documentation_options.js"></script>
@@ -83,7 +83,7 @@
 
 
 <div class="viewcode-block" id="TracerTerm"><a class="viewcode-back" href="../../thetis.html#thetis.tracer_eq.TracerTerm">[docs]</a><span class="k">class</span> <span class="nc">TracerTerm</span><span class="p">(</span><span class="n">Term</span><span class="p">):</span>
-    <span class="sd">&quot;&quot;&quot;</span>
+<span class="w">    </span><span class="sd">&quot;&quot;&quot;</span>
 <span class="sd">    Generic tracer term that provides commonly used members and mapping for</span>
 <span class="sd">    boundary functions.</span>
 <span class="sd">    &quot;&quot;&quot;</span>
@@ -92,7 +92,7 @@
                  <span class="n">use_symmetric_surf_bnd</span><span class="o">=</span><span class="kc">True</span><span class="p">,</span> <span class="n">use_lax_friedrichs</span><span class="o">=</span><span class="kc">True</span><span class="p">,</span>
                  <span class="n">sipg_factor</span><span class="o">=</span><span class="n">Constant</span><span class="p">(</span><span class="mf">1.0</span><span class="p">),</span>
                  <span class="n">sipg_factor_vertical</span><span class="o">=</span><span class="n">Constant</span><span class="p">(</span><span class="mf">1.0</span><span class="p">)):</span>
-        <span class="sd">&quot;&quot;&quot;</span>
+<span class="w">        </span><span class="sd">&quot;&quot;&quot;</span>
 <span class="sd">        :arg function_space: :class:`FunctionSpace` where the solution belongs</span>
 <span class="sd">        :kwarg bathymetry: bathymetry of the domain</span>
 <span class="sd">        :type bathymetry: 3D :class:`Function` or :class:`Constant`</span>
@@ -128,7 +128,7 @@
         <span class="bp">self</span><span class="o">.</span><span class="n">ds_bottom</span> <span class="o">=</span> <span class="n">ds_bottom</span><span class="p">(</span><span class="n">degree</span><span class="o">=</span><span class="bp">self</span><span class="o">.</span><span class="n">quad_degree</span><span class="p">)</span>
 
 <div class="viewcode-block" id="TracerTerm.get_bnd_functions"><a class="viewcode-back" href="../../thetis.html#thetis.tracer_eq.TracerTerm.get_bnd_functions">[docs]</a>    <span class="k">def</span> <span class="nf">get_bnd_functions</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">c_in</span><span class="p">,</span> <span class="n">uv_in</span><span class="p">,</span> <span class="n">elev_in</span><span class="p">,</span> <span class="n">bnd_id</span><span class="p">,</span> <span class="n">bnd_conditions</span><span class="p">):</span>
-        <span class="sd">&quot;&quot;&quot;</span>
+<span class="w">        </span><span class="sd">&quot;&quot;&quot;</span>
 <span class="sd">        Returns external values of tracer and uv for all supported</span>
 <span class="sd">        boundary conditions.</span>
 
@@ -169,7 +169,7 @@
 
 
 <div class="viewcode-block" id="HorizontalAdvectionTerm"><a class="viewcode-back" href="../../thetis.html#thetis.tracer_eq.HorizontalAdvectionTerm">[docs]</a><span class="k">class</span> <span class="nc">HorizontalAdvectionTerm</span><span class="p">(</span><span class="n">TracerTerm</span><span class="p">):</span>
-    <span class="sa">r</span><span class="sd">&quot;&quot;&quot;</span>
+<span class="w">    </span><span class="sa">r</span><span class="sd">&quot;&quot;&quot;</span>
 <span class="sd">    Horizontal advection term :math:`\nabla_h \cdot (\textbf{u} T)`</span>
 
 <span class="sd">    The weak formulation reads</span>
@@ -243,7 +243,7 @@
 
 
 <div class="viewcode-block" id="VerticalAdvectionTerm"><a class="viewcode-back" href="../../thetis.html#thetis.tracer_eq.VerticalAdvectionTerm">[docs]</a><span class="k">class</span> <span class="nc">VerticalAdvectionTerm</span><span class="p">(</span><span class="n">TracerTerm</span><span class="p">):</span>
-    <span class="sa">r</span><span class="sd">&quot;&quot;&quot;</span>
+<span class="w">    </span><span class="sa">r</span><span class="sd">&quot;&quot;&quot;</span>
 <span class="sd">    Vertical advection term :math:`\partial (w T)/(\partial z)`</span>
 
 <span class="sd">    The weak form reads</span>
@@ -292,7 +292,7 @@
 
 
 <div class="viewcode-block" id="HorizontalDiffusionTerm"><a class="viewcode-back" href="../../thetis.html#thetis.tracer_eq.HorizontalDiffusionTerm">[docs]</a><span class="k">class</span> <span class="nc">HorizontalDiffusionTerm</span><span class="p">(</span><span class="n">TracerTerm</span><span class="p">):</span>
-    <span class="sa">r</span><span class="sd">&quot;&quot;&quot;</span>
+<span class="w">    </span><span class="sa">r</span><span class="sd">&quot;&quot;&quot;</span>
 <span class="sd">    Horizontal diffusion term :math:`-\nabla_h \cdot (\mu_h \nabla_h T)`</span>
 
 <span class="sd">    Using the symmetric interior penalty method the weak form becomes</span>
@@ -356,7 +356,7 @@
 
 
 <div class="viewcode-block" id="VerticalDiffusionTerm"><a class="viewcode-back" href="../../thetis.html#thetis.tracer_eq.VerticalDiffusionTerm">[docs]</a><span class="k">class</span> <span class="nc">VerticalDiffusionTerm</span><span class="p">(</span><span class="n">TracerTerm</span><span class="p">):</span>
-    <span class="sa">r</span><span class="sd">&quot;&quot;&quot;</span>
+<span class="w">    </span><span class="sa">r</span><span class="sd">&quot;&quot;&quot;</span>
 <span class="sd">    Vertical diffusion term :math:`-\frac{\partial}{\partial z} \Big(\mu \frac{T}{\partial z}\Big)`</span>
 
 <span class="sd">    Using the symmetric interior penalty method the weak form becomes</span>
@@ -412,7 +412,7 @@
 
 
 <div class="viewcode-block" id="SourceTerm"><a class="viewcode-back" href="../../thetis.html#thetis.tracer_eq.SourceTerm">[docs]</a><span class="k">class</span> <span class="nc">SourceTerm</span><span class="p">(</span><span class="n">TracerTerm</span><span class="p">):</span>
-    <span class="sa">r</span><span class="sd">&quot;&quot;&quot;</span>
+<span class="w">    </span><span class="sa">r</span><span class="sd">&quot;&quot;&quot;</span>
 <span class="sd">    Generic source term</span>
 
 <span class="sd">    The weak form reads</span>
@@ -431,7 +431,7 @@
 
 
 <div class="viewcode-block" id="TracerEquation"><a class="viewcode-back" href="../../thetis.html#thetis.tracer_eq.TracerEquation">[docs]</a><span class="k">class</span> <span class="nc">TracerEquation</span><span class="p">(</span><span class="n">Equation</span><span class="p">):</span>
-    <span class="sd">&quot;&quot;&quot;</span>
+<span class="w">    </span><span class="sd">&quot;&quot;&quot;</span>
 <span class="sd">    3D tracer advection-diffusion equation :eq:`tracer_eq` in conservative form</span>
 <span class="sd">    &quot;&quot;&quot;</span>
     <span class="k">def</span> <span class="fm">__init__</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">function_space</span><span class="p">,</span>
@@ -439,7 +439,7 @@
                  <span class="n">use_symmetric_surf_bnd</span><span class="o">=</span><span class="kc">True</span><span class="p">,</span> <span class="n">use_lax_friedrichs</span><span class="o">=</span><span class="kc">True</span><span class="p">,</span>
                  <span class="n">sipg_factor</span><span class="o">=</span><span class="n">Constant</span><span class="p">(</span><span class="mf">10.0</span><span class="p">),</span>
                  <span class="n">sipg_factor_vertical</span><span class="o">=</span><span class="n">Constant</span><span class="p">(</span><span class="mf">10.0</span><span class="p">)):</span>
-        <span class="sd">&quot;&quot;&quot;</span>
+<span class="w">        </span><span class="sd">&quot;&quot;&quot;</span>
 <span class="sd">        :arg function_space: :class:`FunctionSpace` where the solution belongs</span>
 <span class="sd">        :kwarg bathymetry: bathymetry of the domain</span>
 <span class="sd">        :type bathymetry: 3D :class:`Function` or :class:`Constant`</span>
@@ -472,8 +472,8 @@
       <div class="clearer"></div>
     </div>
     <div class="footer" role="contentinfo">
-        &#169; Copyright 2016-2022, Tuomas Kärnä et al..
-      Created using <a href="https://www.sphinx-doc.org/">Sphinx</a> 4.3.2.
+        &#169; Copyright 2016-2023, Tuomas Kärnä et al..
+      Created using <a href="https://www.sphinx-doc.org/">Sphinx</a> 4.5.0.
     </div>
   </body>
 </html>
