--- a/genindex.html
+++ b/genindex.html
@@ -1,15 +1,17 @@
+
 <!DOCTYPE html>
 
-<html lang="en" data-content_root="./">
+<html>
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Index &#8212; Thetis 0+untagged.2009.gd7af522 documentation</title>
-    <link rel="stylesheet" type="text/css" href="_static/pygments.css?v=fa44fd50" />
-    <link rel="stylesheet" type="text/css" href="_static/thetis.css?v=0f3339d6" />
-    <script src="_static/documentation_options.js?v=5ff313e6"></script>
-    <script src="_static/doctools.js?v=888ff710"></script>
-    <script src="_static/sphinx_highlight.js?v=dc90522c"></script>
+    <link rel="stylesheet" type="text/css" href="_static/pygments.css" />
+    <link rel="stylesheet" type="text/css" href="_static/thetis.css" />
+    <script data-url_root="./" id="documentation_options" src="_static/documentation_options.js"></script>
+    <script src="_static/jquery.js"></script>
+    <script src="_static/underscore.js"></script>
+    <script src="_static/doctools.js"></script>
     <link rel="index" title="Index" href="#" />
     <link rel="search" title="Search" href="search.html" />
 <!--[if lte IE 6]>
@@ -168,10 +170,10 @@
 </li>
       <li><a href="thetis.html#thetis.equation.Equation.add_term">add_term() (thetis.equation.Equation method)</a>
 </li>
-      <li><a href="thetis.html#thetis.options.ModelOptions2d.add_tracer_2d">add_tracer_2d() (thetis.options.ModelOptions2d method)</a>
-</li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="thetis.html#thetis.options.ModelOptions2d.add_tracer_2d">add_tracer_2d() (thetis.options.ModelOptions2d method)</a>
+</li>
       <li><a href="thetis.html#thetis.options.ModelOptions2d.add_tracer_system_2d">add_tracer_system_2d() (thetis.options.ModelOptions2d method)</a>
 </li>
       <li><a href="thetis.html#thetis.turbines.DiscreteTidalTurbineFarm.add_turbines">add_turbines() (thetis.turbines.DiscreteTidalTurbineFarm method)</a>
@@ -246,10 +248,6 @@
         <li><a href="thetis.html#thetis.solver2d.FlowSolver2d.assign_initial_conditions">(thetis.solver2d.FlowSolver2d method)</a>
 </li>
       </ul></li>
-      <li><a href="thetis.html#thetis.forcing.ATMInterpolator">ATMInterpolator (class in thetis.forcing)</a>
-</li>
-      <li><a href="thetis.html#thetis.forcing.ATMNetCDFTime">ATMNetCDFTime (class in thetis.forcing)</a>
-</li>
       <li><a href="thetis.html#thetis.options.CommonModelOptions.atmospheric_pressure">atmospheric_pressure (thetis.options.CommonModelOptions attribute)</a>
 </li>
       <li><a href="thetis.html#thetis.shallowwater_eq.AtmosphericPressureTerm">AtmosphericPressureTerm (class in thetis.shallowwater_eq)</a>
@@ -590,10 +588,10 @@
         <li><a href="thetis.html#thetis.timeintegrator.SteadyState.cfl_coeff">(thetis.timeintegrator.SteadyState attribute)</a>
 </li>
       </ul></li>
-      <li><a href="thetis.html#thetis.options.ModelOptions3d.check_salinity_conservation">check_salinity_conservation (thetis.options.ModelOptions3d attribute)</a>
-</li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="thetis.html#thetis.options.ModelOptions3d.check_salinity_conservation">check_salinity_conservation (thetis.options.ModelOptions3d attribute)</a>
+</li>
       <li><a href="thetis.html#thetis.options.ModelOptions3d.check_salinity_overshoot">check_salinity_overshoot (thetis.options.ModelOptions3d attribute)</a>
 </li>
       <li><a href="thetis.html#thetis.options.SedimentModelOptions.check_sediment_conservation">check_sediment_conservation (thetis.options.SedimentModelOptions attribute)</a>
@@ -710,16 +708,6 @@
         <li><a href="thetis.html#thetis.turbines.TurbineOptimisationCallback.compute_values">(thetis.turbines.TurbineOptimisationCallback method)</a>
 </li>
       </ul></li>
-      <li><a href="thetis.html#thetis.forcing.FES2004TidalBoundaryForcing.compute_velocity">compute_velocity (thetis.forcing.FES2004TidalBoundaryForcing attribute)</a>
-
-      <ul>
-        <li><a href="thetis.html#thetis.forcing.TidalBoundaryForcing.compute_velocity">(thetis.forcing.TidalBoundaryForcing property)</a>
-</li>
-        <li><a href="thetis.html#thetis.forcing.TPXOTidalBoundaryForcing.compute_velocity">(thetis.forcing.TPXOTidalBoundaryForcing attribute)</a>
-</li>
-      </ul></li>
-      <li><a href="thetis.html#thetis.forcing.compute_wind_stress">compute_wind_stress() (in module thetis.forcing)</a>
-</li>
       <li><a href="thetis.html#thetis.tracer_eq_2d.ConservativeHorizontalAdvectionTerm">ConservativeHorizontalAdvectionTerm (class in thetis.tracer_eq_2d)</a>
 </li>
       <li><a href="thetis.html#thetis.tracer_eq_2d.ConservativeHorizontalDiffusionTerm">ConservativeHorizontalDiffusionTerm (class in thetis.tracer_eq_2d)</a>
@@ -752,14 +740,6 @@
 </li>
       <li><a href="thetis.html#thetis.optimisation.ControlsExportOptimisationCallback">ControlsExportOptimisationCallback (class in thetis.optimisation)</a>
 </li>
-      <li><a href="thetis.html#thetis.forcing.FES2004TidalBoundaryForcing.coord_layout">coord_layout (thetis.forcing.FES2004TidalBoundaryForcing attribute)</a>
-
-      <ul>
-        <li><a href="thetis.html#thetis.forcing.TidalBoundaryForcing.coord_layout">(thetis.forcing.TidalBoundaryForcing property)</a>
-</li>
-        <li><a href="thetis.html#thetis.forcing.TPXOTidalBoundaryForcing.coord_layout">(thetis.forcing.TPXOTidalBoundaryForcing attribute)</a>
-</li>
-      </ul></li>
       <li><a href="thetis.html#thetis.coordsys.CoordinateSystem">CoordinateSystem (class in thetis.coordsys)</a>
 </li>
       <li><a href="thetis.html#thetis.options.CommonModelOptions.coriolis_frequency">coriolis_frequency (thetis.options.CommonModelOptions attribute)</a>
@@ -970,8 +950,6 @@
 </li>
       <li><a href="thetis.html#thetis.utility.ElementContinuity">ElementContinuity (class in thetis.utility)</a>
 </li>
-      <li><a href="thetis.html#thetis.forcing.FES2004TidalBoundaryForcing.elev_nc_file">elev_nc_file (thetis.forcing.FES2004TidalBoundaryForcing attribute)</a>
-</li>
       <li><a href="thetis.html#thetis.utility3d.DensitySolverWeak.ensure_positive_salinity">ensure_positive_salinity() (thetis.utility3d.DensitySolverWeak method)</a>
 </li>
       <li><a href="thetis.html#thetis.timezone.epoch_to_datetime">epoch_to_datetime() (in module thetis.timezone)</a>
@@ -1050,10 +1028,10 @@
 </li>
       <li><a href="thetis.html#thetis.inversion_tools.StationObservationManager.eval_observation_at_time">eval_observation_at_time() (thetis.inversion_tools.StationObservationManager method)</a>
 </li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="thetis.html#thetis.timeintegrator.LeapFrogAM3.eval_rhs">eval_rhs() (thetis.timeintegrator.LeapFrogAM3 method)</a>
 </li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="thetis.html#thetis.callback.CallbackManager.evaluate">evaluate() (thetis.callback.CallbackManager method)</a>
 
       <ul>
@@ -1147,8 +1125,6 @@
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="thetis.html#thetis.options.GLSModelOptions.f_wall">f_wall (thetis.options.GLSModelOptions attribute)</a>
-</li>
-      <li><a href="thetis.html#thetis.forcing.FES2004TidalBoundaryForcing">FES2004TidalBoundaryForcing (class in thetis.forcing)</a>
 </li>
       <li><a href="thetis.html#thetis.diagnostics.HessianRecoverer2D.field_2d">field_2d (thetis.diagnostics.HessianRecoverer2D attribute)</a>
 </li>
@@ -1260,11 +1236,7 @@
 </li>
       <li><a href="thetis.html#thetis.coupled_timeintegrator_2d.GeneralCoupledTimeIntegrator2D">GeneralCoupledTimeIntegrator2D (class in thetis.coupled_timeintegrator_2d)</a>
 </li>
-      <li><a href="thetis.html#thetis.forcing.GenericInterpolator2D">GenericInterpolator2D (class in thetis.forcing)</a>
-</li>
       <li><a href="thetis.html#thetis.turbulence.GenericLengthScaleModel">GenericLengthScaleModel (class in thetis.turbulence)</a>
-</li>
-      <li><a href="thetis.html#thetis.forcing.GenericSpatialInterpolator2D">GenericSpatialInterpolator2D (class in thetis.forcing)</a>
 </li>
       <li><a href="thetis.html#thetis.sediment_model.SedimentModel.get_advective_velocity_correction_factor">get_advective_velocity_correction_factor() (thetis.sediment_model.SedimentModel method)</a>
 </li>
@@ -1383,8 +1355,6 @@
       <li><a href="thetis.html#thetis.stability_functions.GOTMStabilityFunctionCheng">GOTMStabilityFunctionCheng (class in thetis.stability_functions)</a>
 </li>
       <li><a href="thetis.html#thetis.stability_functions.GOTMStabilityFunctionKanthaClayson">GOTMStabilityFunctionKanthaClayson (class in thetis.stability_functions)</a>
-</li>
-      <li><a href="thetis.html#thetis.forcing.FES2004TidalBoundaryForcing.grid_nc_file">grid_nc_file (thetis.forcing.FES2004TidalBoundaryForcing attribute)</a>
 </li>
       <li><a href="thetis.html#thetis.interpolation.GridInterpolator">GridInterpolator (class in thetis.interpolation)</a>
 </li>
@@ -1598,17 +1568,9 @@
 </li>
       <li><a href="thetis.html#thetis.momentum_eq.InternalPressureGradientCalculator">InternalPressureGradientCalculator (class in thetis.momentum_eq)</a>
 </li>
-      <li><a href="thetis.html#thetis.forcing.GenericSpatialInterpolator2D.interpolate">interpolate() (thetis.forcing.GenericSpatialInterpolator2D method)</a>
+      <li><a href="thetis.html#thetis.interpolation.NetCDFLatLonInterpolator2d.interpolate">interpolate() (thetis.interpolation.NetCDFLatLonInterpolator2d method)</a>
 
       <ul>
-        <li><a href="thetis.html#thetis.forcing.SpatialInterpolatorNCOM2d.interpolate">(thetis.forcing.SpatialInterpolatorNCOM2d method)</a>
-</li>
-        <li><a href="thetis.html#thetis.forcing.SpatialInterpolatorNCOM3d.interpolate">(thetis.forcing.SpatialInterpolatorNCOM3d method)</a>
-</li>
-        <li><a href="thetis.html#thetis.forcing.SpatialInterpolatorROMS3d.interpolate">(thetis.forcing.SpatialInterpolatorROMS3d method)</a>
-</li>
-        <li><a href="thetis.html#thetis.interpolation.NetCDFLatLonInterpolator2d.interpolate">(thetis.interpolation.NetCDFLatLonInterpolator2d method)</a>
-</li>
         <li><a href="thetis.html#thetis.interpolation.SpatialInterpolator.interpolate">(thetis.interpolation.SpatialInterpolator method)</a>
 </li>
         <li><a href="thetis.html#thetis.interpolation.SpatialInterpolator2d.interpolate">(thetis.interpolation.SpatialInterpolator2d method)</a>
@@ -1764,8 +1726,6 @@
 </li>
       <li><a href="thetis.html#thetis.interpolation.LinearTimeInterpolator">LinearTimeInterpolator (class in thetis.interpolation)</a>
 </li>
-      <li><a href="thetis.html#thetis.forcing.LiveOceanInterpolator">LiveOceanInterpolator (class in thetis.forcing)</a>
-</li>
       <li><a href="thetis.html#thetis.exporter.HDF5Exporter.load">load() (thetis.exporter.HDF5Exporter method)</a>
 </li>
       <li><a href="thetis.html#thetis.inversion_tools.StationObservationManager.load_observation_data">load_observation_data() (thetis.inversion_tools.StationObservationManager method)</a>
@@ -1881,8 +1841,6 @@
         <li><a href="thetis.html#module-thetis.exporter">thetis.exporter</a>
 </li>
         <li><a href="thetis.html#module-thetis.field_defs">thetis.field_defs</a>
-</li>
-        <li><a href="thetis.html#module-thetis.forcing">thetis.forcing</a>
 </li>
         <li><a href="thetis.html#module-thetis.implicitexplicit">thetis.implicitexplicit</a>
 </li>
@@ -2045,8 +2003,6 @@
       </ul></li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="thetis.html#thetis.forcing.NCOMInterpolator">NCOMInterpolator (class in thetis.forcing)</a>
-</li>
       <li><a href="thetis.html#thetis.interpolation.NetCDFLatLonInterpolator2d">NetCDFLatLonInterpolator2d (class in thetis.interpolation)</a>
 </li>
       <li><a href="thetis.html#thetis.interpolation.NetCDFSpatialInterpolator">NetCDFSpatialInterpolator (class in thetis.interpolation)</a>
@@ -2393,16 +2349,6 @@
         <li><a href="thetis.html#thetis.timeintegrator.TimeIntegrator.set_dt">(thetis.timeintegrator.TimeIntegrator method)</a>
 </li>
       </ul></li>
-      <li><a href="thetis.html#thetis.forcing.ATMInterpolator.set_fields">set_fields() (thetis.forcing.ATMInterpolator method)</a>
-
-      <ul>
-        <li><a href="thetis.html#thetis.forcing.GenericInterpolator2D.set_fields">(thetis.forcing.GenericInterpolator2D method)</a>
-</li>
-        <li><a href="thetis.html#thetis.forcing.LiveOceanInterpolator.set_fields">(thetis.forcing.LiveOceanInterpolator method)</a>
-</li>
-        <li><a href="thetis.html#thetis.forcing.NCOMInterpolator.set_fields">(thetis.forcing.NCOMInterpolator method)</a>
-</li>
-      </ul></li>
       <li><a href="thetis.html#thetis.turbulence.set_func_max_val">set_func_max_val() (in module thetis.turbulence)</a>
 </li>
       <li><a href="thetis.html#thetis.turbulence.set_func_min_val">set_func_min_val() (in module thetis.turbulence)</a>
@@ -2422,8 +2368,6 @@
 </li>
       </ul></li>
       <li><a href="thetis.html#thetis.log.set_thetis_loggers">set_thetis_loggers() (in module thetis.log)</a>
-</li>
-      <li><a href="thetis.html#thetis.forcing.TidalBoundaryForcing.set_tidal_field">set_tidal_field() (thetis.forcing.TidalBoundaryForcing method)</a>
 </li>
       <li><a href="thetis.html#thetis.solver.FlowSolver.set_time_step">set_time_step() (thetis.solver.FlowSolver method)</a>
 
@@ -2609,14 +2553,6 @@
 </li>
       <li><a href="thetis.html#thetis.interpolation.SpatialInterpolator2d">SpatialInterpolator2d (class in thetis.interpolation)</a>
 </li>
-      <li><a href="thetis.html#thetis.forcing.SpatialInterpolatorNCOM2d">SpatialInterpolatorNCOM2d (class in thetis.forcing)</a>
-</li>
-      <li><a href="thetis.html#thetis.forcing.SpatialInterpolatorNCOM3d">SpatialInterpolatorNCOM3d (class in thetis.forcing)</a>
-</li>
-      <li><a href="thetis.html#thetis.forcing.SpatialInterpolatorNCOMBase">SpatialInterpolatorNCOMBase (class in thetis.forcing)</a>
-</li>
-      <li><a href="thetis.html#thetis.forcing.SpatialInterpolatorROMS3d">SpatialInterpolatorROMS3d (class in thetis.forcing)</a>
-</li>
       <li><a href="thetis.html#thetis.timeintegrator.SSPRK22ALE">SSPRK22ALE (class in thetis.timeintegrator)</a>
 </li>
       <li><a href="thetis.html#thetis.rungekutta.SSPRK33">SSPRK33 (class in thetis.rungekutta)</a>
@@ -2781,13 +2717,6 @@
 
       <ul>
         <li><a href="thetis.html#module-thetis.field_defs">module</a>
-</li>
-      </ul></li>
-      <li>
-    thetis.forcing
-
-      <ul>
-        <li><a href="thetis.html#module-thetis.forcing">module</a>
 </li>
       </ul></li>
       <li>
@@ -2976,8 +2905,6 @@
 </li>
       <li><a href="thetis.html#thetis.options.ModelOptions2d.tidal_turbine_farms">tidal_turbine_farms (thetis.options.ModelOptions2d attribute)</a>
 </li>
-      <li><a href="thetis.html#thetis.forcing.TidalBoundaryForcing">TidalBoundaryForcing (class in thetis.forcing)</a>
-</li>
       <li><a href="thetis.html#thetis.turbines.TidalTurbine">TidalTurbine (class in thetis.turbines)</a>
 </li>
       <li><a href="thetis.html#thetis.turbines.TidalTurbineFarm">TidalTurbineFarm (class in thetis.turbines)</a>
@@ -3061,8 +2988,6 @@
 </li>
       </ul></li>
       <li><a href="thetis.html#thetis.coordsys.UTMCoordinateSystem.to_xy">to_xy() (thetis.coordsys.UTMCoordinateSystem method)</a>
-</li>
-      <li><a href="thetis.html#thetis.forcing.TPXOTidalBoundaryForcing">TPXOTidalBoundaryForcing (class in thetis.forcing)</a>
 </li>
       <li><a href="thetis.html#thetis.options.ModelOptions2d.tracer_advective_velocity_factor">tracer_advective_velocity_factor (thetis.options.ModelOptions2d attribute)</a>
 </li>
@@ -3194,10 +3119,10 @@
       </ul></li>
       <li><a href="thetis.html#thetis.options.ModelOptions2d.use_automatic_wetting_and_drying_alpha">use_automatic_wetting_and_drying_alpha (thetis.options.ModelOptions2d attribute)</a>
 </li>
-      <li><a href="thetis.html#thetis.options.ModelOptions3d.use_baroclinic_formulation">use_baroclinic_formulation (thetis.options.ModelOptions3d attribute)</a>
-</li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="thetis.html#thetis.options.ModelOptions3d.use_baroclinic_formulation">use_baroclinic_formulation (thetis.options.ModelOptions3d attribute)</a>
+</li>
       <li><a href="thetis.html#thetis.options.SedimentModelOptions.use_bedload">use_bedload (thetis.options.SedimentModelOptions attribute)</a>
 </li>
       <li><a href="thetis.html#thetis.options.ModelOptions3d.use_bottom_friction">use_bottom_friction (thetis.options.ModelOptions3d attribute)</a>
@@ -3257,8 +3182,6 @@
       <li><a href="thetis.html#thetis.coordsys.UTMCoordinateSystem">UTMCoordinateSystem (class in thetis.coordsys)</a>
 </li>
       <li><a href="thetis.html#thetis.diagnostics.VorticityCalculator2D.uv_2d">uv_2d (thetis.diagnostics.VorticityCalculator2D attribute)</a>
-</li>
-      <li><a href="thetis.html#thetis.forcing.FES2004TidalBoundaryForcing.uv_nc_file">uv_nc_file (thetis.forcing.FES2004TidalBoundaryForcing attribute)</a>
 </li>
   </ul></td>
 </tr></table>
@@ -3409,8 +3332,8 @@
       <div class="clearer"></div>
     </div>
     <div class="footer" role="contentinfo">
-    &#169; Copyright 2016-2023, Tuomas Kärnä et al..
-      Created using <a href="https://www.sphinx-doc.org/">Sphinx</a> 7.2.6.
+        &#169; Copyright 2016-2023, Tuomas Kärnä et al..
+      Created using <a href="https://www.sphinx-doc.org/">Sphinx</a> 4.5.0.
     </div>
   </body>
 </html>
