--- a/_modules/thetis/implicitexplicit.html
+++ b/_modules/thetis/implicitexplicit.html
@@ -5,7 +5,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>thetis.implicitexplicit &#8212; Thetis 0+untagged.1888.gc4e776a documentation</title>
+    <title>thetis.implicitexplicit &#8212; Thetis 0+untagged.2009.gd7af522 documentation</title>
     <link rel="stylesheet" type="text/css" href="../../_static/pygments.css" />
     <link rel="stylesheet" type="text/css" href="../../_static/thetis.css" />
     <script data-url_root="../../" id="documentation_options" src="../../_static/documentation_options.js"></script>
@@ -58,8 +58,8 @@
 <span class="kn">from</span> <span class="nn">.rungekutta</span> <span class="kn">import</span> <span class="o">*</span>
 
 
-<div class="viewcode-block" id="IMEXGeneric"><a class="viewcode-back" href="../../thetis.html#thetis.implicitexplicit.IMEXGeneric">[docs]</a><span class="k">class</span> <span class="nc">IMEXGeneric</span><span class="p">(</span><span class="n">TimeIntegrator</span><span class="p">):</span>
-    <span class="sd">&quot;&quot;&quot;</span>
+<div class="viewcode-block" id="IMEXGeneric"><a class="viewcode-back" href="../../thetis.html#thetis.implicitexplicit.IMEXGeneric">[docs]</a><span class="k">class</span> <span class="nc">IMEXGeneric</span><span class="p">(</span><span class="n">TimeIntegrator</span><span class="p">,</span> <span class="n">ABC</span><span class="p">):</span>
+<span class="w">    </span><span class="sd">&quot;&quot;&quot;</span>
 <span class="sd">    Generic implementation of Runge-Kutta Implicit-Explicit schemes</span>
 
 <span class="sd">    Derived classes must define the implicit :attr:`dirk_class` and explicit</span>
@@ -70,21 +70,19 @@
 <span class="sd">    solver. In case of non-linear terms proper linearization must defined in the</span>
 <span class="sd">    equation using the two solution functions (solution, solution_old)</span>
 <span class="sd">    &quot;&quot;&quot;</span>
-    <span class="n">__metaclass__</span> <span class="o">=</span> <span class="n">ABCMeta</span>
-
     <span class="nd">@abstractproperty</span>
     <span class="k">def</span> <span class="nf">dirk_class</span><span class="p">(</span><span class="bp">self</span><span class="p">):</span>
-        <span class="sd">&quot;&quot;&quot;Implicit DIRK class&quot;&quot;&quot;</span>
+<span class="w">        </span><span class="sd">&quot;&quot;&quot;Implicit DIRK class&quot;&quot;&quot;</span>
         <span class="k">pass</span>
 
     <span class="nd">@abstractproperty</span>
     <span class="k">def</span> <span class="nf">erk_class</span><span class="p">(</span><span class="bp">self</span><span class="p">):</span>
-        <span class="sd">&quot;&quot;&quot;Explicit Runge-Kutta class&quot;&quot;&quot;</span>
+<span class="w">        </span><span class="sd">&quot;&quot;&quot;Explicit Runge-Kutta class&quot;&quot;&quot;</span>
         <span class="k">pass</span>
 
     <span class="nd">@PETSc</span><span class="o">.</span><span class="n">Log</span><span class="o">.</span><span class="n">EventDecorator</span><span class="p">(</span><span class="s2">&quot;thetis.IMEXGeneric.__init__&quot;</span><span class="p">)</span>
     <span class="k">def</span> <span class="fm">__init__</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">equation</span><span class="p">,</span> <span class="n">solution</span><span class="p">,</span> <span class="n">fields</span><span class="p">,</span> <span class="n">dt</span><span class="p">,</span> <span class="n">options</span><span class="p">,</span> <span class="n">bnd_conditions</span><span class="p">):</span>
-        <span class="sd">&quot;&quot;&quot;</span>
+<span class="w">        </span><span class="sd">&quot;&quot;&quot;</span>
 <span class="sd">        :arg equation: equation to solve</span>
 <span class="sd">        :type equation: :class:`Equation` object</span>
 <span class="sd">        :arg solution: :class:`Function` where solution will be stored</span>
@@ -115,26 +113,26 @@
 
 <div class="viewcode-block" id="IMEXGeneric.update_solver"><a class="viewcode-back" href="../../thetis.html#thetis.implicitexplicit.IMEXGeneric.update_solver">[docs]</a>    <span class="nd">@PETSc</span><span class="o">.</span><span class="n">Log</span><span class="o">.</span><span class="n">EventDecorator</span><span class="p">(</span><span class="s2">&quot;thetis.IMEXGeneric.update_solver&quot;</span><span class="p">)</span>
     <span class="k">def</span> <span class="nf">update_solver</span><span class="p">(</span><span class="bp">self</span><span class="p">):</span>
-        <span class="sd">&quot;&quot;&quot;Create solver objects&quot;&quot;&quot;</span>
+<span class="w">        </span><span class="sd">&quot;&quot;&quot;Create solver objects&quot;&quot;&quot;</span>
         <span class="bp">self</span><span class="o">.</span><span class="n">dirk</span><span class="o">.</span><span class="n">update_solver</span><span class="p">()</span>
         <span class="bp">self</span><span class="o">.</span><span class="n">erk</span><span class="o">.</span><span class="n">update_solver</span><span class="p">()</span></div>
 
 <div class="viewcode-block" id="IMEXGeneric.initialize"><a class="viewcode-back" href="../../thetis.html#thetis.implicitexplicit.IMEXGeneric.initialize">[docs]</a>    <span class="nd">@PETSc</span><span class="o">.</span><span class="n">Log</span><span class="o">.</span><span class="n">EventDecorator</span><span class="p">(</span><span class="s2">&quot;thetis.IMEXGeneric.initialize&quot;</span><span class="p">)</span>
     <span class="k">def</span> <span class="nf">initialize</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">solution</span><span class="p">):</span>
-        <span class="sd">&quot;&quot;&quot;Assigns initial conditions to all required fields.&quot;&quot;&quot;</span>
+<span class="w">        </span><span class="sd">&quot;&quot;&quot;Assigns initial conditions to all required fields.&quot;&quot;&quot;</span>
         <span class="bp">self</span><span class="o">.</span><span class="n">dirk</span><span class="o">.</span><span class="n">initialize</span><span class="p">(</span><span class="n">solution</span><span class="p">)</span>
         <span class="bp">self</span><span class="o">.</span><span class="n">erk</span><span class="o">.</span><span class="n">initialize</span><span class="p">(</span><span class="n">solution</span><span class="p">)</span></div>
 
 <div class="viewcode-block" id="IMEXGeneric.advance"><a class="viewcode-back" href="../../thetis.html#thetis.implicitexplicit.IMEXGeneric.advance">[docs]</a>    <span class="nd">@PETSc</span><span class="o">.</span><span class="n">Log</span><span class="o">.</span><span class="n">EventDecorator</span><span class="p">(</span><span class="s2">&quot;thetis.IMEXGeneric.advance&quot;</span><span class="p">)</span>
     <span class="k">def</span> <span class="nf">advance</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">t</span><span class="p">,</span> <span class="n">update_forcings</span><span class="o">=</span><span class="kc">None</span><span class="p">):</span>
-        <span class="sd">&quot;&quot;&quot;Advances equations for one time step.&quot;&quot;&quot;</span>
+<span class="w">        </span><span class="sd">&quot;&quot;&quot;Advances equations for one time step.&quot;&quot;&quot;</span>
         <span class="k">for</span> <span class="n">i</span> <span class="ow">in</span> <span class="nb">range</span><span class="p">(</span><span class="bp">self</span><span class="o">.</span><span class="n">n_stages</span><span class="p">):</span>
             <span class="bp">self</span><span class="o">.</span><span class="n">solve_stage</span><span class="p">(</span><span class="n">i</span><span class="p">,</span> <span class="n">t</span><span class="p">,</span> <span class="n">update_forcings</span><span class="p">)</span>
         <span class="bp">self</span><span class="o">.</span><span class="n">get_final_solution</span><span class="p">()</span></div>
 
 <div class="viewcode-block" id="IMEXGeneric.solve_stage"><a class="viewcode-back" href="../../thetis.html#thetis.implicitexplicit.IMEXGeneric.solve_stage">[docs]</a>    <span class="nd">@PETSc</span><span class="o">.</span><span class="n">Log</span><span class="o">.</span><span class="n">EventDecorator</span><span class="p">(</span><span class="s2">&quot;thetis.IMEXGeneric.solve_stage&quot;</span><span class="p">)</span>
     <span class="k">def</span> <span class="nf">solve_stage</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">i_stage</span><span class="p">,</span> <span class="n">t</span><span class="p">,</span> <span class="n">update_forcings</span><span class="o">=</span><span class="kc">None</span><span class="p">):</span>
-        <span class="sd">&quot;&quot;&quot;</span>
+<span class="w">        </span><span class="sd">&quot;&quot;&quot;</span>
 <span class="sd">        Solves i-th stage</span>
 <span class="sd">        &quot;&quot;&quot;</span>
         <span class="c1"># set solution to u_n + dt*sum(a*k_erk)</span>
@@ -150,7 +148,7 @@
 
 <div class="viewcode-block" id="IMEXGeneric.get_final_solution"><a class="viewcode-back" href="../../thetis.html#thetis.implicitexplicit.IMEXGeneric.get_final_solution">[docs]</a>    <span class="nd">@PETSc</span><span class="o">.</span><span class="n">Log</span><span class="o">.</span><span class="n">EventDecorator</span><span class="p">(</span><span class="s2">&quot;thetis.IMEXGeneric.get_final_solution&quot;</span><span class="p">)</span>
     <span class="k">def</span> <span class="nf">get_final_solution</span><span class="p">(</span><span class="bp">self</span><span class="p">):</span>
-        <span class="sd">&quot;&quot;&quot;</span>
+<span class="w">        </span><span class="sd">&quot;&quot;&quot;</span>
 <span class="sd">        Evaluates the final solution.</span>
 <span class="sd">        &quot;&quot;&quot;</span>
         <span class="c1"># set solution to u_n + sum(b*k_erk)</span>
@@ -163,7 +161,7 @@
         <span class="bp">self</span><span class="o">.</span><span class="n">erk</span><span class="o">.</span><span class="n">solution_old</span><span class="o">.</span><span class="n">assign</span><span class="p">(</span><span class="bp">self</span><span class="o">.</span><span class="n">dirk</span><span class="o">.</span><span class="n">solution</span><span class="p">)</span></div>
 
 <div class="viewcode-block" id="IMEXGeneric.set_dt"><a class="viewcode-back" href="../../thetis.html#thetis.implicitexplicit.IMEXGeneric.set_dt">[docs]</a>    <span class="k">def</span> <span class="nf">set_dt</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">dt</span><span class="p">):</span>
-        <span class="sd">&quot;&quot;&quot;</span>
+<span class="w">        </span><span class="sd">&quot;&quot;&quot;</span>
 <span class="sd">        Update time step</span>
 
 <span class="sd">        :arg float dt: time step</span>
@@ -173,7 +171,7 @@
 
 
 <div class="viewcode-block" id="IMEXLPUM2"><a class="viewcode-back" href="../../thetis.html#thetis.implicitexplicit.IMEXLPUM2">[docs]</a><span class="k">class</span> <span class="nc">IMEXLPUM2</span><span class="p">(</span><span class="n">IMEXGeneric</span><span class="p">):</span>
-    <span class="sd">&quot;&quot;&quot;</span>
+<span class="w">    </span><span class="sd">&quot;&quot;&quot;</span>
 <span class="sd">    SSP-IMEX RK scheme (20) in Higureras et al. (2014)</span>
 
 <span class="sd">    CFL coefficient is 2.0</span>
@@ -187,7 +185,7 @@
 
 
 <div class="viewcode-block" id="IMEXLSPUM2"><a class="viewcode-back" href="../../thetis.html#thetis.implicitexplicit.IMEXLSPUM2">[docs]</a><span class="k">class</span> <span class="nc">IMEXLSPUM2</span><span class="p">(</span><span class="n">IMEXGeneric</span><span class="p">):</span>
-    <span class="sd">&quot;&quot;&quot;</span>
+<span class="w">    </span><span class="sd">&quot;&quot;&quot;</span>
 <span class="sd">    SSP-IMEX RK scheme (17) in Higureras et al. (2014)</span>
 
 <span class="sd">    CFL coefficient is 2.0</span>
@@ -201,7 +199,7 @@
 
 
 <div class="viewcode-block" id="IMEXMidpoint"><a class="viewcode-back" href="../../thetis.html#thetis.implicitexplicit.IMEXMidpoint">[docs]</a><span class="k">class</span> <span class="nc">IMEXMidpoint</span><span class="p">(</span><span class="n">IMEXGeneric</span><span class="p">):</span>
-    <span class="sd">&quot;&quot;&quot;</span>
+<span class="w">    </span><span class="sd">&quot;&quot;&quot;</span>
 <span class="sd">    Implicit-explicit midpoint scheme (1, 2, 2) from Ascher et al. (1997)</span>
 
 <span class="sd">    Ascher et al. (1997). Implicit-explicit Runge-Kutta methods for</span>
@@ -213,7 +211,7 @@
 
 
 <div class="viewcode-block" id="IMEXEuler"><a class="viewcode-back" href="../../thetis.html#thetis.implicitexplicit.IMEXEuler">[docs]</a><span class="k">class</span> <span class="nc">IMEXEuler</span><span class="p">(</span><span class="n">IMEXGeneric</span><span class="p">):</span>
-    <span class="sd">&quot;&quot;&quot;</span>
+<span class="w">    </span><span class="sd">&quot;&quot;&quot;</span>
 <span class="sd">    Forward-Backward Euler</span>
 <span class="sd">    &quot;&quot;&quot;</span>
     <span class="n">erk_class</span> <span class="o">=</span> <span class="n">ERKEuler</span>
@@ -228,8 +226,8 @@
       <div class="clearer"></div>
     </div>
     <div class="footer" role="contentinfo">
-        &#169; Copyright 2016-2022, Tuomas Kärnä et al..
-      Created using <a href="https://www.sphinx-doc.org/">Sphinx</a> 4.3.2.
+        &#169; Copyright 2016-2023, Tuomas Kärnä et al..
+      Created using <a href="https://www.sphinx-doc.org/">Sphinx</a> 4.5.0.
     </div>
   </body>
 </html>
