--- a/_modules/thetis/log.html
+++ b/_modules/thetis/log.html
@@ -5,7 +5,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>thetis.log &#8212; Thetis 0+untagged.1888.gc4e776a documentation</title>
+    <title>thetis.log &#8212; Thetis 0+untagged.2009.gd7af522 documentation</title>
     <link rel="stylesheet" type="text/css" href="../../_static/pygments.css" />
     <link rel="stylesheet" type="text/css" href="../../_static/thetis.css" />
     <script data-url_root="../../" id="documentation_options" src="../../_static/documentation_options.js"></script>
@@ -81,7 +81,7 @@
 
 
 <span class="k">class</span> <span class="nc">ThetisLogConfig</span><span class="p">:</span>
-    <span class="sd">&quot;&quot;&quot;Module-wide config object&quot;&quot;&quot;</span>
+<span class="w">    </span><span class="sd">&quot;&quot;&quot;Module-wide config object&quot;&quot;&quot;</span>
     <span class="n">filename</span> <span class="o">=</span> <span class="kc">None</span>
     <span class="n">mem_buffer</span> <span class="o">=</span> <span class="kc">None</span>
 
@@ -94,7 +94,7 @@
 
 
 <div class="viewcode-block" id="set_thetis_loggers"><a class="viewcode-back" href="../../thetis.html#thetis.log.set_thetis_loggers">[docs]</a><span class="k">def</span> <span class="nf">set_thetis_loggers</span><span class="p">(</span><span class="n">comm</span><span class="o">=</span><span class="n">COMM_WORLD</span><span class="p">):</span>
-    <span class="sd">&quot;&quot;&quot;Set stream handlers for log messages.</span>
+<span class="w">    </span><span class="sd">&quot;&quot;&quot;Set stream handlers for log messages.</span>
 
 <span class="sd">    :kwarg comm: The communicator the handler should be collective</span>
 <span class="sd">         over. Only rank-0 on that communicator will write to the log, other</span>
@@ -125,7 +125,7 @@
 
 
 <div class="viewcode-block" id="set_log_directory"><a class="viewcode-back" href="../../thetis.html#thetis.log.set_log_directory">[docs]</a><span class="k">def</span> <span class="nf">set_log_directory</span><span class="p">(</span><span class="n">output_directory</span><span class="p">,</span> <span class="n">comm</span><span class="o">=</span><span class="n">COMM_WORLD</span><span class="p">,</span> <span class="n">mode</span><span class="o">=</span><span class="s1">&#39;w&#39;</span><span class="p">):</span>
-    <span class="sd">&quot;&quot;&quot;</span>
+<span class="w">    </span><span class="sd">&quot;&quot;&quot;</span>
 <span class="sd">    Forward all log output to `output_directory/log` file.</span>
 
 <span class="sd">    When called, a new empty log file is created.</span>
@@ -200,7 +200,7 @@
 
 
 <div class="viewcode-block" id="thetis_log_level"><a class="viewcode-back" href="../../thetis.html#thetis.log.thetis_log_level">[docs]</a><span class="k">def</span> <span class="nf">thetis_log_level</span><span class="p">(</span><span class="n">level</span><span class="p">):</span>
-    <span class="sd">&quot;&quot;&quot;Set the log level for Thetis logger.</span>
+<span class="w">    </span><span class="sd">&quot;&quot;&quot;Set the log level for Thetis logger.</span>
 
 <span class="sd">    This controls what level of logging messages are printed to</span>
 <span class="sd">    stderr. The higher the level, the fewer the number of messages.</span>
@@ -235,8 +235,8 @@
       <div class="clearer"></div>
     </div>
     <div class="footer" role="contentinfo">
-        &#169; Copyright 2016-2022, Tuomas Kärnä et al..
-      Created using <a href="https://www.sphinx-doc.org/">Sphinx</a> 4.3.2.
+        &#169; Copyright 2016-2023, Tuomas Kärnä et al..
+      Created using <a href="https://www.sphinx-doc.org/">Sphinx</a> 4.5.0.
     </div>
   </body>
 </html>
