--- a/_modules/thetis/sediment_eq_2d.html
+++ b/_modules/thetis/sediment_eq_2d.html
@@ -5,7 +5,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>thetis.sediment_eq_2d &#8212; Thetis 0+untagged.1878.g52658ff.dirty documentation</title>
+    <title>thetis.sediment_eq_2d &#8212; Thetis 0+untagged.2009.gd7af522 documentation</title>
     <link rel="stylesheet" type="text/css" href="../../_static/pygments.css" />
     <link rel="stylesheet" type="text/css" href="../../_static/thetis.css" />
     <script data-url_root="../../" id="documentation_options" src="../../_static/documentation_options.js"></script>
@@ -68,8 +68,7 @@
 <span class="sd">velocities, and :math:`\mu_h` denotes horizontal diffusivity.</span>
 <span class="sd">&quot;&quot;&quot;</span>
 <span class="kn">from</span> <span class="nn">.equation</span> <span class="kn">import</span> <span class="n">Equation</span>
-<span class="kn">from</span> <span class="nn">.tracer_eq_2d</span> <span class="kn">import</span> <span class="n">HorizontalDiffusionTerm</span><span class="p">,</span> <span class="n">HorizontalAdvectionTerm</span><span class="p">,</span> <span class="n">TracerTerm</span>
-<span class="kn">from</span> <span class="nn">.conservative_tracer_eq_2d</span> <span class="kn">import</span> <span class="n">ConservativeHorizontalAdvectionTerm</span>
+<span class="kn">from</span> <span class="nn">.tracer_eq_2d</span> <span class="kn">import</span> <span class="n">HorizontalDiffusionTerm</span><span class="p">,</span> <span class="n">HorizontalAdvectionTerm</span><span class="p">,</span> <span class="n">ConservativeHorizontalAdvectionTerm</span><span class="p">,</span> <span class="n">TracerTerm</span>
 
 <span class="n">__all__</span> <span class="o">=</span> <span class="p">[</span>
     <span class="s1">&#39;SedimentEquation2D&#39;</span><span class="p">,</span>
@@ -82,17 +81,17 @@
 
 
 <div class="viewcode-block" id="SedimentTerm"><a class="viewcode-back" href="../../thetis.html#thetis.sediment_eq_2d.SedimentTerm">[docs]</a><span class="k">class</span> <span class="nc">SedimentTerm</span><span class="p">(</span><span class="n">TracerTerm</span><span class="p">):</span>
-    <span class="sd">&quot;&quot;&quot;</span>
+<span class="w">    </span><span class="sd">&quot;&quot;&quot;</span>
 <span class="sd">    Generic sediment term that provides commonly used members.</span>
 <span class="sd">    &quot;&quot;&quot;</span>
     <span class="k">def</span> <span class="fm">__init__</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">function_space</span><span class="p">,</span> <span class="n">depth</span><span class="p">,</span> <span class="n">options</span><span class="p">,</span> <span class="n">sediment_model</span><span class="p">,</span> <span class="n">conservative</span><span class="o">=</span><span class="kc">False</span><span class="p">):</span>
-        <span class="sd">&quot;&quot;&quot;</span>
+<span class="w">        </span><span class="sd">&quot;&quot;&quot;</span>
 <span class="sd">        :arg function_space: :class:`FunctionSpace` where the solution belongs</span>
 <span class="sd">        :arg depth: :class:`DepthExpression` containing depth info</span>
 <span class="sd">        :arg options: :class`ModelOptions2d` containing parameters</span>
 <span class="sd">        :kwarg bool conservative: whether to use conservative tracer</span>
 <span class="sd">        &quot;&quot;&quot;</span>
-        <span class="nb">super</span><span class="p">(</span><span class="n">SedimentTerm</span><span class="p">,</span> <span class="bp">self</span><span class="p">)</span><span class="o">.</span><span class="fm">__init__</span><span class="p">(</span><span class="n">function_space</span><span class="p">,</span> <span class="n">depth</span><span class="p">,</span> <span class="n">options</span><span class="p">)</span>
+        <span class="nb">super</span><span class="p">(</span><span class="n">SedimentTerm</span><span class="p">,</span> <span class="bp">self</span><span class="p">)</span><span class="o">.</span><span class="fm">__init__</span><span class="p">(</span><span class="mi">0</span><span class="p">,</span> <span class="s1">&#39;sediment_2d&#39;</span><span class="p">,</span> <span class="n">function_space</span><span class="p">,</span> <span class="n">depth</span><span class="p">,</span> <span class="n">options</span><span class="p">)</span>
         <span class="bp">self</span><span class="o">.</span><span class="n">sediment_model</span> <span class="o">=</span> <span class="n">sediment_model</span>
         <span class="bp">self</span><span class="o">.</span><span class="n">conservative</span> <span class="o">=</span> <span class="n">conservative</span>
 
@@ -109,7 +108,7 @@
 
 
 <div class="viewcode-block" id="ConservativeSedimentAdvectionTerm"><a class="viewcode-back" href="../../thetis.html#thetis.sediment_eq_2d.ConservativeSedimentAdvectionTerm">[docs]</a><span class="k">class</span> <span class="nc">ConservativeSedimentAdvectionTerm</span><span class="p">(</span><span class="n">SedimentTerm</span><span class="p">,</span> <span class="n">ConservativeHorizontalAdvectionTerm</span><span class="p">):</span>
-    <span class="sd">&quot;&quot;&quot;</span>
+<span class="w">    </span><span class="sd">&quot;&quot;&quot;</span>
 <span class="sd">    Advection term for sediment equation</span>
 
 <span class="sd">    Same as :class:`ConservativeHorizontalAdvectionTerm` but allows for equilibrium boundary condition</span>
@@ -118,7 +117,7 @@
 
 
 <div class="viewcode-block" id="SedimentAdvectionTerm"><a class="viewcode-back" href="../../thetis.html#thetis.sediment_eq_2d.SedimentAdvectionTerm">[docs]</a><span class="k">class</span> <span class="nc">SedimentAdvectionTerm</span><span class="p">(</span><span class="n">SedimentTerm</span><span class="p">,</span> <span class="n">HorizontalAdvectionTerm</span><span class="p">):</span>
-    <span class="sd">&quot;&quot;&quot;</span>
+<span class="w">    </span><span class="sd">&quot;&quot;&quot;</span>
 <span class="sd">    Advection term for sediment equation</span>
 
 <span class="sd">    Same as :class:`HorizontalAdvectionTerm` but allows for equilibrium boundary condition</span>
@@ -127,7 +126,7 @@
 
 
 <span class="k">class</span> <span class="nc">SedimentDiffusionTerm</span><span class="p">(</span><span class="n">SedimentTerm</span><span class="p">,</span> <span class="n">HorizontalDiffusionTerm</span><span class="p">):</span>
-    <span class="sd">&quot;&quot;&quot;</span>
+<span class="w">    </span><span class="sd">&quot;&quot;&quot;</span>
 <span class="sd">    Diffusion term for sediment equation</span>
 
 <span class="sd">    Same as :class:`HorizontalDiffusionTerm` but allows for equilibrium boundary condition</span>
@@ -136,7 +135,7 @@
 
 
 <div class="viewcode-block" id="SedimentErosionTerm"><a class="viewcode-back" href="../../thetis.html#thetis.sediment_eq_2d.SedimentErosionTerm">[docs]</a><span class="k">class</span> <span class="nc">SedimentErosionTerm</span><span class="p">(</span><span class="n">SedimentTerm</span><span class="p">):</span>
-    <span class="sd">&quot;&quot;&quot;</span>
+<span class="w">    </span><span class="sd">&quot;&quot;&quot;</span>
 <span class="sd">    Erosion term for sediment equation&quot;&quot;&quot;</span>
 <div class="viewcode-block" id="SedimentErosionTerm.residual"><a class="viewcode-back" href="../../thetis.html#thetis.sediment_eq_2d.SedimentErosionTerm.residual">[docs]</a>    <span class="k">def</span> <span class="nf">residual</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">solution</span><span class="p">,</span> <span class="n">solution_old</span><span class="p">,</span> <span class="n">fields</span><span class="p">,</span> <span class="n">fields_old</span><span class="p">,</span> <span class="n">bnd_conditions</span><span class="p">):</span>
         <span class="n">ero</span> <span class="o">=</span> <span class="bp">self</span><span class="o">.</span><span class="n">sediment_model</span><span class="o">.</span><span class="n">get_erosion_term</span><span class="p">()</span>
@@ -148,7 +147,7 @@
 
 
 <div class="viewcode-block" id="SedimentDepositionTerm"><a class="viewcode-back" href="../../thetis.html#thetis.sediment_eq_2d.SedimentDepositionTerm">[docs]</a><span class="k">class</span> <span class="nc">SedimentDepositionTerm</span><span class="p">(</span><span class="n">SedimentTerm</span><span class="p">):</span>
-    <span class="sd">&quot;&quot;&quot;</span>
+<span class="w">    </span><span class="sd">&quot;&quot;&quot;</span>
 <span class="sd">    Deposition term for sediment equation&quot;&quot;&quot;</span>
 <div class="viewcode-block" id="SedimentDepositionTerm.residual"><a class="viewcode-back" href="../../thetis.html#thetis.sediment_eq_2d.SedimentDepositionTerm.residual">[docs]</a>    <span class="k">def</span> <span class="nf">residual</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">solution</span><span class="p">,</span> <span class="n">solution_old</span><span class="p">,</span> <span class="n">fields</span><span class="p">,</span> <span class="n">fields_old</span><span class="p">,</span> <span class="n">bnd_conditions</span><span class="p">):</span>
         <span class="n">depo</span> <span class="o">=</span> <span class="bp">self</span><span class="o">.</span><span class="n">sediment_model</span><span class="o">.</span><span class="n">get_deposition_coefficient</span><span class="p">()</span>
@@ -159,12 +158,12 @@
 
 
 <div class="viewcode-block" id="SedimentEquation2D"><a class="viewcode-back" href="../../thetis.html#thetis.sediment_eq_2d.SedimentEquation2D">[docs]</a><span class="k">class</span> <span class="nc">SedimentEquation2D</span><span class="p">(</span><span class="n">Equation</span><span class="p">):</span>
-    <span class="sd">&quot;&quot;&quot;</span>
+<span class="w">    </span><span class="sd">&quot;&quot;&quot;</span>
 <span class="sd">    2D sediment advection-diffusion equation: :eq:`tracer_eq_2d` or :eq:`cons_tracer_eq_2d`</span>
 <span class="sd">    with sediment source and sink term</span>
 <span class="sd">    &quot;&quot;&quot;</span>
     <span class="k">def</span> <span class="fm">__init__</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">function_space</span><span class="p">,</span> <span class="n">depth</span><span class="p">,</span> <span class="n">options</span><span class="p">,</span> <span class="n">sediment_model</span><span class="p">,</span> <span class="n">conservative</span><span class="o">=</span><span class="kc">False</span><span class="p">):</span>
-        <span class="sd">&quot;&quot;&quot;</span>
+<span class="w">        </span><span class="sd">&quot;&quot;&quot;</span>
 <span class="sd">        :arg function_space: :class:`FunctionSpace` where the solution belongs</span>
 <span class="sd">        :arg depth: :class:`DepthExpression` containing depth info</span>
 <span class="sd">        :arg options: :class`ModelOptions2d` containing parameters</span>
@@ -189,8 +188,8 @@
       <div class="clearer"></div>
     </div>
     <div class="footer" role="contentinfo">
-        &#169; Copyright 2016-2022, Tuomas Kärnä et al..
-      Created using <a href="https://www.sphinx-doc.org/">Sphinx</a> 4.3.2.
+        &#169; Copyright 2016-2023, Tuomas Kärnä et al..
+      Created using <a href="https://www.sphinx-doc.org/">Sphinx</a> 4.5.0.
     </div>
   </body>
 </html>
